# mechagrad

./: .gitignore  Cargo.toml  README.md  prepare_mnist_data.sh  shell.nix
mechagrad/: Cargo.toml
mechagrad-simple-mnist/: Cargo.toml
mechagrad-simple-mnist/src/: main.rs
mechagrad/src/: Cargo.toml  backward.rs  conv2d.rs  function.rs  lib.rs  matmul.rs  max.rs  reshape.rs  sqrt.rs  tensor.rs
src/: accumulate_grad.rs  add.rs  backward_function.rs  div.rs  dotprod.rs  exp.rs  log.rs  mul.rs  node.rs  pow.rs  relu.rs  sub.rs  sum.rs  transpose.rs
