[package]
name = "simple-mnist"
version = "0.1.0"
edition = "2021"

[dependencies]
mechagrad = { path = "../mechagrad" }
ndarray = "0.16"
ndarray-linalg = { version = "0.13", features = ["openblas-system"] }
num-traits = "*"
all_asserts = "2.3.1"
pretty_assertions = "1"
tch = "0.16"
ndarray-rand = "0.15.0"
